# swagger_output.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "My API",
+    "title": "Chat APP",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
   "host": "localhost:8080",
@@ -26,6 +26,216 @@
   "produces": [
     "application/json"
   ],
-  "paths": {},
-  "definitions": {}
+  "paths": {
+    "/api/users": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint to get all users",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "Quantity of users. (default is 10)",
+            "type": "string"
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "description": "Start before x users. (default is 0)",
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      },
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint to create a user",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "User information.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Jhon Doe"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "jhondoe@gmail.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "encryptedPassword"
+                }
+              },
+              "required": [
+                "name",
+                "email",
+                "password"
+              ]
+            }
+          }
+        ],
+        "responses": {},
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      },
+      "put": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint to change a user information",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "User information.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "number",
+                  "example": 1
+                },
+                "name": {
+                  "type": "string",
+                  "example": "Jhon Doe"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "jhondoe@gmail.com"
+                }
+              },
+              "required": [
+                "id"
+              ]
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "type": "string",
+              "example": "string",
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "User updated successfully."
+          },
+          "400": {
+            "schema": {
+              "$ref": "#/definitions/Errors"
+            },
+            "description": "Invalid params"
+          },
+          "404": {
+            "schema": {
+              "$ref": "#/definitions/Errors"
+            },
+            "description": "User not found"
+          },
+          "422": {
+            "description": "DataBase Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint to delete a user",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "description": "User id.",
+            "type": "integer",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "type": "string",
+              "example": "string",
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "User deleted successfully."
+          },
+          "400": {
+            "schema": {
+              "$ref": "#/definitions/Errors"
+            },
+            "description": "Invalid params"
+          },
+          "404": {
+            "schema": {
+              "$ref": "#/definitions/Errors"
+            },
+            "description": "User not found"
+          },
+          "422": {
+            "description": "DataBase Error"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "User": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Jhon Doe"
+        },
+        "email": {
+          "type": "string",
+          "example": "jhondoe@gmail.com"
+        }
+      }
+    },
+    "Errors": {
+      "type": "object",
+      "properties": {
+        "errors": {
+          "type": "object",
+          "properties": {
+            "message": {
+              "type": "string",
+              "example": "string"
+            },
+            "errCode": {
+              "type": "string",
+              "example": "string"
+            }
+          }
+        }
+      }
+    }
+  }
 }
